--- a/.github/workflows/setup-repo.yml
+++ b/.github/workflows/setup-repo.yml
@@ -3,7 +3,15 @@ name: Setup Repository for Pipelines
 on:
   workflow_call:
     inputs:
+      dev-dependencies:
+        description: "Whether to install dev dependencies."
+        required: false
+        default: false
+        type: boolean
       build-command:
+        description: "The command to run after repository setup."
+        required: false
+        default: ""
         type: string
 
 jobs:
@@ -20,7 +28,12 @@ jobs:
           cache: true
 
       - name: Install Dependencies
-        run: pdm install --frozen-lockfile
+        run: |
+          if [ "${{ inputs.dev-dependencies }}" = "true" ]; then
+            pdm install --dev --frozen-lockfile
+          else
+            pdm install --frozen-lockfile
+          fi
 
       - if: ${{ inputs.build-command }}
         name: Run Build Command
