--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic>=2.5.3",
     "pydantic-settings>=2.1.0",
     "result>=0.16.0",
+    "asyncpg>=0.29.0",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
