--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,10 @@ services:
     container_name: archive-db
     image: postgres:15.2
     restart: unless-stopped
-    env_file: .env
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - 5432:5432
     volumes:
