feat: dump openapi script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ distribution = false
 
 [tool.pdm.scripts]
 dev = "uvicorn app.app:app --reload --port 8000 --host 0.0.0.0 --log-config uvicorn_disable_logging.json"
+schema = { call = "app.openapi:main" } 
 format = "ruff format ."
 lint = "ruff check ."
 
