--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+### sql ###
+*.sql
+
+### Schema ###
+openapi.json
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,linux,macos,windows,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,linux,macos,windows,visualstudiocode
 
@@ -24,7 +30,6 @@
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
