--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [main, 01-28-dump_openapi]
+    branches: [01-28-dump_openapi]
   pull_request:
   workflow_dispatch:
 
@@ -55,5 +55,5 @@ jobs:
           dev-dependencies: true
           build-command: "pdm run schema:gen diff.json"
 
-      - name: Check OpenAPI schema
-        run: diff openapi.json diff.json
+      # - name: Check OpenAPI schema
+      #   run: diff openapi.json diff.json
