--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
         run: dirname $(pdm info --python) >> $GITHUB_PATH
 
       - name: Dump OpenAPI schema
-        run: pdm run schema:gen diff.json
+        run: pdm run schema:gen --dump-path diff.json
 
       - name: Check OpenAPI schema
         run: diff openapi.json diff.json
