--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,9 @@ jobs:
       - name: Add python to PATH
         run: dirname $(pdm info --python) >> $GITHUB_PATH
 
+      - name: Fabricate environment
+        run: cp .env.example .env
+
       - name: Dump OpenAPI schema
         run: pdm run schema:gen --dump-path diff.json
 
