fix(ci): add python to GITHUB_PATH

--- a/.github/actions/setup-deps/action.yml
+++ b/.github/actions/setup-deps/action.yml
@@ -30,6 +30,5 @@ runs:
       shell: bash
 
     - name: Activate virtual environment
-      run: |
-        eval $(pdm venv activate)
+      run: dirname $(pdm info --python) >> $GITHUB_PATH
       shell: bash
