--- a/.github/actions/setup-deps/action.yml
+++ b/.github/actions/setup-deps/action.yml
@@ -29,6 +29,6 @@ runs:
         fi
       shell: bash
 
-    - name: Activate virtual environment
+    - name: Add Python to PATH
       run: dirname $(pdm info --python) >> $GITHUB_PATH
       shell: bash
