--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "result>=0.16.0",
     "asyncpg>=0.29.0",
+    "httpx>=0.28.1",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
